# mergehdronline

./: .gitignore  LICENSE.txt  README.md  kent_hdr.py  manage.py  requirements.txt  sample_api_request_script.py
HDR/: common_settings.py  settings.py.example  urls.py  wsgi.py
HDR/static/custom/: bootstrap-variables.scss  bootswatch.scss  edit_profile.scss  main.scss  storyline.js
HDR/static/js/: cytoscape.min.js
HDR/static/pnotify/: pnotify.custom.min.js
api/: urls.py  views.py
c++/: CMakeLists.txt  LICENSE.txt  Makefile  fix_chromatic_aberration.cc  fix_chromatic_aberration.hh  fix_noise.cc  fix_noise.hh  hdr_adjust.cc  hdr_convert.cc  hdr_create.cc  hdr_denoise.cc  hdr_fix_ca.cc  hdr_squish.cc  headers.hh  helpers.hh  image.cc  image.hh  shared_array.hh  solve_poisson.cc  solve_poisson.hh  squish_luminance.cc  squish_luminance.hh
main/: urls.py  views.py
main/templates/: _footer.html  _index_content.html  _navigation_all.html  base.html  index.html
main/templatetags/: navigation_tags.py
